RESOLVED FIXED296611
[Site Isolation] Debug assertion in FrameLoadState::didCommitLoad() when shared process is enabled
https://bugs.webkit.org/show_bug.cgi?id=296611
Summary [Site Isolation] Debug assertion in FrameLoadState::didCommitLoad() when shar...
Ryosuke Niwa
Reported 2025-07-28 23:01:44 PDT
e.g. 1 0x30310be7c WebKit::FrameLoadState::didCommitLoad() 2 0x3031d5a5c WebKit::WebFrameProxy::didCommitLoad(WTF::String const&, WebCore::CertificateInfo const&, bool) 3 0x303246c90 WebKit::WebPageProxy::didCommitLoadForFrame(IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&) 4 0x3031d7608 WebKit::WebFrameProxy::commitProvisionalFrame(IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&) 5 0x3032465f0 WebKit::WebPageProxy::didCommitLoadForFrame(IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&) 6 0x301cafa68 auto void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), IPC::Connection&, std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>&&)::'lambda'(auto&&...)::operator()<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>(auto&&...) const 7 0x301caf5a0 decltype(std::declval<WebKit::WebPageProxy>()(std::declval<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>(), std::declval<WebKit::FrameInfoData>(), std::declval<WebCore::ResourceRequest>(), std::declval<std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>>(), std::declval<WTF::String>(), std::declval<bool>(), std::declval<WebCore::FrameLoadType>(), std::declval<WebCore::CertificateInfo>(), std::declval<bool>(), std::declval<bool>(), std::declval<WTF::String>(), std::declval<WebCore::ResourceResponseSource>(), std::declval<bool>(), std::declval<WebCore::HasInsecureContent>(), std::declval<WebCore::MouseEventPolicy>(), std::declval<WebKit::UserData>())) std::__1::__invoke[abi:sn190102]<void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), IPC::Connection&, std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>&&)::'lambda'(auto&&...), WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>(WebKit::WebPageProxy&&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>&&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>&&, WTF::String&&, bool&&, WebCore::FrameLoadType&&, WebCore::CertificateInfo&&, bool&&, bool&&, WTF::String&&, WebCore::ResourceResponseSource&&, bool&&, WebCore::HasInsecureContent&&, WebCore::MouseEventPolicy&&, WebKit::UserData&&) 8 0x301caf4a8 decltype(auto) std::__1::__apply_tuple_impl[abi:sn190102]<void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), IPC::Connection&, std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>&&)::'lambda'(auto&&...), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul, 7ul, 8ul, 9ul, 10ul, 11ul, 12ul, 13ul, 14ul, 15ul>(WebKit::WebPageProxy&&, WebKit::WebPageProxy&&, std::__1::__tuple_indices<0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul, 7ul, 8ul, 9ul, 10ul, 11ul, 12ul, 13ul, 14ul, 15ul>) 9 0x301caf350 decltype(auto) std::__1::apply[abi:sn190102]<void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), IPC::Connection&, std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>&&)::'lambda'(auto&&...), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::WebPageProxy&&, WebKit::WebPageProxy&&) 10 0x301cabf20 void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&), IPC::Connection&, std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String, bool, WebCore::FrameLoadType, WebCore::CertificateInfo, bool, bool, WTF::String, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData>&&) 11 0x301a785f0 void IPC::handleMessage<Messages::WebPageProxy::DidCommitLoadForFrame, IPC::Connection, WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&)>(IPC::Connection&, IPC::Decoder&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::String&&, bool, WebCore::FrameLoadType, WebCore::CertificateInfo const&, bool, bool, WTF::String&&, WebCore::ResourceResponseSource, bool, WebCore::HasInsecureContent, WebCore::MouseEventPolicy, WebKit::UserData const&)) 12 0x301a6c9f8 WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 13 0x304aa8630 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 14 0x3030bf85c WebKit::AuxiliaryProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 15 0x303458d14 WebKit::WebProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 16 0x301e8d074 WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 17 0x304a6f178 IPC::Connection::dispatchMessage(IPC::Decoder&) 18 0x304a6f620 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 19 0x304a6fdb0 IPC::Connection::dispatchIncomingMessages() 20 0x304a983d0 IPC::Connection::dispatchIncomingMessages()::$_0::operator()() const 21 0x304a98310 WTF::Detail::CallableWrapper<IPC::Connection::dispatchIncomingMessages()::$_0, void>::call() 22 0x10d2584d0 WTF::Function<void ()>::operator()() const 23 0x10d3302a0 WTF::RunLoop::performWork() 24 0x10d334934 WTF::RunLoop::performWork(void*) 25 0x181259cd4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 26 0x181259c68 __CFRunLoopDoSource0 27 0x1812599d4 __CFRunLoopDoSources0 28 0x181258628 __CFRunLoopRun 29 0x181257c58 CFRunLoopRunSpecific 30 0x182826c78 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 31 0x102154bb0 TestWebKitAPI::Util::run(bool*)
Attachments
Ryosuke Niwa
Comment 1 2025-07-28 23:09:35 PDT
EWS
Comment 2 2025-07-30 19:37:09 PDT
Committed 298062@main (201b85f701dd): <https://commits.webkit.org/298062@main> Reviewed commits have been landed. Closing PR #48645 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-07-30 19:38:14 PDT
Note You need to log in before you can comment on or make changes to this bug.