[Site Isolation] Debug assertion in FrameLoadState::didCommitLoad() when shared process is enabled https://bugs.webkit.org/show_bug.cgi?id=296611

Reviewed by Alex Christensen.

Return nullptr for about:blank in BrowsingContextGroup::sharedProcessForSite.

* Source/WebKit/UIProcess/BrowsingContextGroup.cpp:
(WebKit::BrowsingContextGroup::sharedProcessForSite):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::(SiteIsolation, SharedProcessBasicNavigation)):

Canonical link: https://commits.webkit.org/298062@main